<resources>
    <string name="app_name">Core Basemaster</string>
    <string name="warning">Warning</string>
    <string name="cannot_find_messenger_app">Cannot find Messenger App!</string>

    <string name="ok">OK</string>
    <string name="url_dash">https://bitdash-a.akamaihd.net/content/MI201109210084_1/mpds/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.mpd</string>
    <string name="url_thumbnails">https://bitdash-a.akamaihd.net/content/MI201109210084_1/thumbnails/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.jpg</string>

    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]></string>
    <string name="ad_tag_url_uiza">https://static.uiza.io/media/Uiza-Preroll-20181004.xml</string>

    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="video">Video Setting</string>
    <string name="audio">Audio Setting</string>
    <string name="text">Subtitle Setting</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>

    <string name="empty_list">Danh sách rỗng</string>
    <string name="err">Error</string>
    <string name="err_setup">Cannot get link play or detail entity</string>
    <string name="err_400">Bad Request: The request was unacceptable, often due to missing a required parameter.</string>
    <string name="err_401">Unauthorized: No valid API key provided.</string>
    <string name="err_404">Not Found: The requested resource does not exist.</string>
    <string name="err_422">Unprocessable: The syntax of the request entity is incorrect (often is wrong parameter).</string>
    <string name="err_500">Internal Server Error: We had a problem with our server. Try again later.</string>
    <string name="err_503">Service Unavailable: The server is overloaded or down for maintenance.</string>
    <string name="err_unknow">Unknow Error</string>
    <string name="confirm">Confirm</string>
    <string name="more_like_this">More like this</string>
    <string name="cannot_play_any_videos">Cannot play any linkplays.</string>
    <string name="has_no_linkplay">Dữ liệu của video này bị lỗi.</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="err_list_relation_null">listAllEntityRelation == null -> should init related list before by using UizaData.putToListAllEntityRelation()</string>
    <string name="search">Tìm kiếm</string>
    <string name="starring">Starring:</string>
    <string name="director">Director:</string>
    <string name="genres">Genres:</string>
    <string name="key_not_found">You must enter your accessKeyId and secretKeyId first</string>
    <string name="cannot_play_will_try">Cannot play, UizaPlayer will try to play the next link...</string>
    <string name="err_no_internet">No internet connection.</string>
    <string name="err_no_internet_tap_to_retry">No internet connection.\nTap to retry.</string>
    <string name="err_live_is_stopped">This content is not available now</string>
    <string name="try_all_link_play_but_no_luck">Đã thử play tất cả các link nhưng đều không thành công</string>
    <string name="entity_cannot_be_null_or_empty">Entity cannot be null or empty</string>
    <string name="auth_or_app_id_is_null_or_empty">Error: auth or appId is null or empty</string>
    <string name="no_token_streaming">Error: Token streaming cannot be found</string>
    <string name="no_link_play">This entity has no linkplay</string>
    <string name="cannot_get_detail_entity">Cannot get detail of this entity</string>
    <string name="no_caption">No captions are available for this video</string>
    <string name="related_list">Related List</string>
    <string name="share_via">Share via</string>
    <string name="cannot_get_list_relation">Lỗi không tải được danh sách entity liên quan</string>
    <string name="live">• LIVE</string>
    <string name="casty_introduction_text">Use this button to connect with Chromecast</string>
    <string name="playlist">Playlist</string>
    <string name="press_again_to_exit">Press once again to exit!</string>
    <string name="stream_name">Stream Name</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stream_not_started">Failed to start. Please check server url and security credentials.</string>
    <string name="live_indicator">On Air</string>
    <string name="nocamera">No camera exists in your device</string>
    <string name="camera_not_running_properly">Camera is not running properly</string>
    <string name="restart">Restart</string>
    <string name="streaming_not_finished">Your previous broadcast still sends packets due to slow internet speed</string>
    <string name="oopps_shouldnt_happen">Oopps this shouldn\'t be happened. Please let the library developer this status</string>
    <string name="broadcast_connection_lost">Connection to media server is lost</string>
    <string name="low_bandwidth">Network speed is low. Latency is increasing.</string>
    <string name="not_eligible_for_broadcast">Your device is not eligible to broadcast. There is no hardware encoder.</string>
    <string name="no_network_connectivity">You\'re not connected to any network. Please connect to Internet</string>
    <string name="stop_broadcasting">Stop</string>
    <string name="permission_is_required">Camera and Microphone permission is required to run this app</string>
    <string name="permission">Permission</string>
    <string name="app_doesnot_work_without_permissions">App does not work without permissions. Please give Camera and Record Audio permission on app settings</string>
    <string name="first_call_open_camera">First call openCamera function</string>
    <string name="only_one_camera_exists">Only one camera exists in this device</string>
    <string name="camera_permission_is_required">Camera permission is required to run this app</string>
    <string name="microphone_permission_is_required">Microphone permission is required to run this app</string>
    <string name="err_dont_support">Your device was not supported this resolution</string>
    <string name="start_record">Start record</string>
    <string name="start_button">Start</string>
    <string name="start_button_saved">Start - Save</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string><!--filters-->
    <string name="no_filter">No filter</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="color">Color</string>
    <string name="contrast">Contrast</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="gif">Gif</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image">Image</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="rgb_saturate">RGB saturate</string>
    <string name="ripple">Ripple</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="surface_filter">Surface filter</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="temperature">Temperature</string>
    <string name="zebra">Zebra</string>
    <string name="enable_disable_fxaa">enable/disable FXAA</string>
    <string name="hint_rtmp">rtmp://yourendpoint</string>
    <string name="microphone">Microphone</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="sepia">Sepia</string>
    <string name="aqua">Aqua</string>
    <string name="posterize">Posterize</string>
    <string name="text_live">Loitp@uiza.io</string>
    <string name="stop_record">Stop record</string>
    <string name="per_warning">Thông báo</string>
    <string name="uz_need_per">Uiza cần bạn cần cấp quyền điều chỉnh độ sáng màn hình</string>
    <string name="approve">Cấp phép</string>
    <string name="err_call_api_retrievealiveevent">Error: Cannot get data from api retrieveALiveEvent()</string>
    <string name="err_cannot_chat_messenger_now">Cannot chat messenger now</string>
    <string name="err_pip_only_tablet">Only tablet can use this feature: picture in picture</string>
    <string name="url_sample_subtile">http://112.78.4.162/sub.vtt</string>
    <string name="uiza_introduce">Uiza is the complete toolkit for building a powerful video streaming application with unlimited scalability. We design Uiza so simple that you only need a few lines of codes to start streaming, but sophisticated enough for you to build complex products on top of it.</string>
</resources>
