<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/et_rtp_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:inputType="textUri"
        android:textColor="@color/app_color"
        android:textColorHint="@color/app_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/start_record" />

        <Button
            android:id="@+id/b_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginEnd="5dp"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_camera_button" />
    </LinearLayout>
</RelativeLayout>