<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_5">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/related_list"
            android:textColor="@color/Black"
            android:textSize="@dimen/txt_18"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/bt_exit"
            android:layout_width="@dimen/w_30"
            android:layout_height="@dimen/w_30"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close_black_48dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@id/pb"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/w_20"
            android:layout_height="@dimen/w_20"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/empty_list"
            android:textColor="@color/Black"
            android:textSize="@dimen/txt_14"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>