<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.uiza.broadcast.UzLivestream
        android:id="@+id/uiza_livestream"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/b_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_start_stop_store"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_25"
        android:background="@drawable/bt_live_enable"
        android:paddingBottom="@dimen/padding_3"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:paddingTop="@dimen/padding_3"
        android:text="@string/start_button"
        android:textAllCaps="true"
        android:textColor="@color/White"
        android:textSize="@dimen/txt_18" />

    <TextView
        android:id="@+id/b_start_stop_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_5"
        android:background="@drawable/bt_live_enable"
        android:paddingBottom="@dimen/padding_3"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:paddingTop="@dimen/padding_3"
        android:text="@string/start_button_saved"
        android:textAllCaps="true"
        android:textColor="@color/White"
        android:textSize="@dimen/txt_18" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/b_switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_switch_video_white_48dp"
        android:tint="@color/primaryColor"
        app:backgroundTint="@color/White"
        app:borderWidth="@dimen/w_1"
        app:elevation="@dimen/w_1"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/b_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b_switch_camera"
        android:layout_margin="@dimen/margin_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_movie_filter_white_48dp"
        android:tint="@color/primaryColor"
        app:backgroundTint="@color/White"
        app:borderWidth="@dimen/w_1"
        app:elevation="@dimen/w_1"
        app:fabSize="mini" />
</RelativeLayout>
