<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_50"
            android:paddingTop="@dimen/padding_50">

            <TextView
                android:id="@+id/tv_video_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_20"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10">

                <TextView
                    android:id="@+id/tv_video_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/info_video_gray"
                    android:textSize="@dimen/txt_15" />

                <TextView
                    android:id="@+id/tv_video_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:background="@drawable/bt_rate"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding_10"
                    android:paddingRight="@dimen/padding_10"
                    android:textColor="@color/White"
                    android:textSize="@dimen/txt_15" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_video_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:textColor="@color/info_video_description"
                android:textSize="@dimen/txt_14" />

            <View
                android:layout_width="@dimen/w_100"
                android:layout_height="@dimen/w_1"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/info_video_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starring"
                    android:textColor="@color/info_video_description"
                    android:textSize="@dimen/txt_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_video_starring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:textColor="@color/info_video_description"
                    android:textSize="@dimen/txt_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textColor="@color/info_video_description"
                    android:textSize="@dimen/txt_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_video_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:textColor="@color/info_video_description"
                    android:textSize="@dimen/txt_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textColor="@color/info_video_description"
                    android:textSize="@dimen/txt_14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_video_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:textColor="@color/info_video_description"
                    android:textSize="@dimen/txt_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:textColor="@color/info_video_description"
                android:textSize="@dimen/txt_10"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_55"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:text="@string/more_like_this"
                android:textAllCaps="true"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_more_like_this_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:textColor="@color/info_video_description"
                android:textSize="@dimen/txt_14"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="@dimen/w_20"
        android:layout_height="@dimen/w_20"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/White"
        app:indicatorName="BallSpinFadeLoaderIndicator" />
</RelativeLayout>
